##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = neurommsig_epilepsy_knowledge
version = 0.0.1-dev
long_description = file: README.rst

[options]
install_requires =
    bel_repository>=0.0.8

# Random options
python_requires = >=3.6
zip-safe = false
include-package-data = true

# Where is my code
packages = neurommsig_epilepsy_knowledge

[options.entry_points]
console_scripts =
    neurommsig-epilepsy-knowledge = neurommsig_epilepsy_knowledge:main
