##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = neurommsig_epilepsy
version = 0.0.1-dev
description = Mechanistic pathway knowledge on Epilepsy encoded in Biological Expression Language
long_description = file: README.rst

# URLs associated with the project
url = https://github.com/neurommsig-epilepsy/neurommsig-epilepsy
download_url = https://github.com/neurommsig-epilepsy/neurommsig-epilepsy/releases
project_urls =
    Bug Tracker = https://github.com/neurommsig-epilepsy/neurommsig-epilepsy/issues
    Source Code = https://github.com/neurommsig-epilepsy/neurommsig-epilepsy

# Author information
author = Daniel Domingo-Fernández
author_email = daniel.domingo.fernandez@scai.fraunhofer.de
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

[options]
install_requires =
    pybel

# Random options
python_requires = >=3.6
zip-safe = false
include-package-data = true

# Where is my code
packages = neurommsig_epilepsy

[options.entry_points]
console_scripts =
    neurommsig-epilepsy = neurommsig_epilepsy:main
